--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -638,22 +638,6 @@
 </ol>		 
 		 
 <h2 id="h_7">References</h2>
-<h3 id="h_7_3">Common terms</h3>
-<details><summary>Terms used on this page</summary>
-<dl class="dl-horizontal">
-<dt>Employer is resident on a reserve</dt><dd>
-<p>"Employer is resident on a reserve" means that the reserve is the place where the central management and control over the employer organization is actually located.</p>
-<p>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, the real management and control of an organization may be exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p>
-</dd>
-<dt>Indian</dt><dd>
-"Indian" means an Indian as defined for the purposes of the Indian Act. An Indian is a person who is registered or entitled to be registered as an Indian under the Indian Act.</dd>
-<dt>Indian lives on the reserve</dt><dd>
-"Indian lives on the reserve" means the Indian lives on the reserve in a domestic establishment that is their principal place of residence and that is the centre of their daily routine.</dd>
-<dt>On a reserve</dt><dd>"On a reserve" means on a reserve as defined under the Indian Act, including all settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category I-A lands under the Cree-Naskapi (of Quebec) Act).</dd>
-<dt>Social, cultural, educational or economic development</dt><dd>
-"Social, cultural, educational or economic development" includes the provision of social services such as health care or counselling.</dd>
-</dl>
-</details>
 		
 <h3 id="h_7_1">Related</h3>
 <ul>
@@ -712,6 +696,31 @@
     <li class="next"><a href="../how/index.html" rel="next"><span class="wb-inv">Next: </span>How to calculate</a></li>
   </ul>
 </nav>
+
+<section id="ajax-def1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
+	</div></section>
+
+<section id="ajax-def2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Indian</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
+	</div></section>
+
+<section id="ajax-def3" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Indian lives on the reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
+	</div></section>
+
+<section id="ajax-def4" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">On a reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
+	</div></section>
+
+<section id="ajax-def5" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Social, cultural, educational or economic development</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def5"></div>
+	</div></section>
 
 
 	<section id="ajax-example1a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Examples where exempt</h2>
