--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -578,11 +578,9 @@
 </li>
 
 <li><h3 id="h_6">Report the payment on a slip</h3>
-<p>You must report the following on a slip:</p>
-<p>You must report the following on a slip depending on the <strong>type of payment</strong>:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-  <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">T4 - Employee<span class="wb-inv">: Option 1</span></h3>
+<p>You must report using the following slip depending on <strong>who</strong> you made the payment to:</p>
+ <details><summary>T4 slip - Payment made to an employee</summary> 
+
 	<p>Report on: </p>
         <ul class="fa-ul">
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income, on the portion of the taxable income</li>
@@ -595,13 +593,11 @@
 		 <li><span class="fas fa-check fa-li text-success"></span>Code 69 – Indian (exempt income) – Non-eligible retiring allowances</li>
 		 <li><span class="fas fa-check fa-li text-success"></span>Code 71 – Indian (tax-exempt income) – Employment</li>
 		
-
-
                      </ul>
-  </li>
+  </details>
 
-  <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">T4 - Self-employed worker<span class="wb-inv">: Option 1</span></h3>
+ <details><summary>T4 slip - Payment made to a self-employed worker</summary> 
+   
 	<p>Report the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher , a self-employed barber or hairdresser , or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
         <ul class="fa-ul">
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income, on the portion of the taxable income</li>
@@ -615,10 +611,9 @@
 
 
                      </ul>
-  </li>
+  </details>
+ <details><summary>T4A slip - Payment made to a person or partnership that was a shareholder</summary> 
 
-  <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">T4A - Person or partnership that was a shareholder<span class="wb-inv">: Option 2</span></h3>
     <p>Report on: </p> <ul class="fa-ul">
 	     <li><span class="fas fa-check fa-li text-success"></span> Box 016 – Pension or superannuation, on the portion of the taxable income</li>
 	     <li><span class="fas fa-check fa-li text-success"></span> Box 018 – Lump-sum payments, on the portion of the taxable income</li>
@@ -628,8 +623,8 @@
 	     <li><span class="fas fa-check fa-li text-success"></span> Code 195 – Indian (exempt income) – PRPP payments</li>
 	   
                      </ul>
-  </li>
-</ul>
+  </details>
+
 	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
 	
 
