--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -302,8 +302,8 @@
 <p>The status Indian individual's (status confirmed in step 1) income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Employee lives on a reserve (this means it is their principal place of residence and is the centre of their daily routine) </li>
-<li class="cnjnctn-col">Employer is a resident on a reserve (this means the reserve is the place where the central management and control over the employer organization is actually located) </li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
@@ -419,7 +419,7 @@
 <h4 id="h_3_1">Residency situation</h4>
   
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> Employee lives on a reserve <strong>or</strong> you are a resident on a reserve, continue to <a href="#3a">Step 3a</a></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> <a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> <strong>or</strong> you are a resident on a reserve, continue to <a href="#3a">Step 3a</a></li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> Employee <strong>does not</strong> live on a reserve and you are <strong>not</strong> resident on a reserve but the employee is <strong>required to perform duties on a reserve</strong>, continue to <a href="#3b">Step 3b</a></li>
             </ul>
 
@@ -432,8 +432,8 @@
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">Employee lives on a reserve (this means it is their principal place of residence and is the centre of their daily routine) </li>
-<li class="cnjnctn-col">Employer is a resident on a reserve (this means the reserve is the place where the central management and control over the employer organization is actually located) </li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 </li>
 <li class="cnjnctn-col">Employee performs more than 50% of their employment duties on a reserve</li>
@@ -455,8 +455,8 @@
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">Employee lives on a reserve (this means it is their principal place of residence and is the centre of their daily routine) </li>
-<li class="cnjnctn-col">Employer is a resident on a reserve (this means the reserve is the place where the central management and control over the employer organization is actually located) </li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 </li>
 </ul>
