--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -518,11 +518,9 @@
 </li>
 <li>
 <h3 id="h_5">Withhold payroll deductions and remit the GST/HST</h3>
-<p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
+<p class="mrgn-bttm-lg">You must withhold and remit the deductions depending on <strong>who</strong> you made the payment to and the <strong>type of remuneration</strong>: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>:</p>
 
-<p>You must withhold and remit the deductions depending on the <strong>type of worker</strong>:</p>
-
-<details><summary>Worker is an employee</summary>
+<details><summary>Payment made to an employee</summary>
 <p>You must withhold the following deductions:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">
@@ -563,13 +561,12 @@
 
 </details>
 
-<details><summary>Worker is not your employee</summary>
-<p>You must withhold the deductions and report on a <strong>T4A slip</strong>:</p>
+<details><summary>Payment made to a self-employed worker</summary>
 
 <p>Add info here</p>
 </details>
 
-<details><summary>Worker is self-employed</summary>
+<details><summary>Payment made to a person or partnership that was a shareholder</summary>
 <p>Add info here</p>
 </details>
 
@@ -578,7 +575,7 @@
 </li>
 
 <li><h3 id="h_6">Report the payment on a slip</h3>
-<p>You must report using the following slip depending on <strong>who</strong> you made the payment to:</p>
+<p class="mrgn-bttm-lg">You must report using the following slip depending on <strong>who</strong> you made the payment to:</p>
  <details><summary>T4 slip - Payment made to an employee</summary> 
 
 	<p>Report on: </p>
