--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -281,7 +281,16 @@
           <div class="wb-frmvld gc-font-2019">
             <form>
               <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
-                <p>What is the type of income? </p>
+	 <p>Select the situation</p>
+		 <ul>
+<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0a", "live": true}'>The worker registered under the Indian Act
+<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
+                      <div class="wb-fieldflow-header">
+                        <div class="brdr-tp">
+                          <p class="gc-font-2019 mrgn-tp-md">Where the worker is registered under the Indian Act, you need to consider the type of income.</p>
+                        </div>
+
+                <p class="wb-fieldflow-label">What is the type of income? </p>
                 <ul>
                   <li>Employment income
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
@@ -290,10 +299,8 @@
                           <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the situation?</p>
-                       <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
-</ul>
+                       <p>Learn more: <a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
+
                       </div>
                       <ul>
                         <li>Worker lives on a reserve
@@ -364,7 +371,10 @@
                     </div>
                   </li>
                   <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1b", "live": true}'>Non-employment income (for example: pension income, retiring allowances, RRSP and CPP/QPP)</li>
-                </ul>
+                </ul> </div></div></li>
+	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0b", "live": true}'>The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
+Indian Act</li>
+	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0c", "live": true}'>None of the above situation apply</li></ul>
               </div>
             </form>
           </div>
