--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -283,14 +283,14 @@
               <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 	 <p>Select the situation</p>
 		 <ul>
-<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0a", "live": true}'>The worker registered under the Indian Act
+<li>Worker registered under the Indian Act
 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                       <div class="wb-fieldflow-header">
                         <div class="brdr-tp">
                           <p class="gc-font-2019 mrgn-tp-md">Where the worker is registered under the Indian Act, you need to consider the type of income.</p>
                         </div>
-
                 <p class="wb-fieldflow-label">What is the type of income? </p>
+ </div>
                 <ul>
                   <li>Employment income
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
@@ -371,14 +371,26 @@
                     </div>
                   </li>
                   <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1b", "live": true}'>Non-employment income (for example: pension income, retiring allowances, RRSP and CPP/QPP)</li>
-                </ul> </div></div></li>
+                </ul> </div></li>
 	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0b", "live": true}'>The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</li>
-	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0c", "live": true}'>None of the above situation apply</li></ul>
+	<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-0c", "live": true}'>The worker is not registered under the Indian Act</li></ul>
               </div>
             </form>
           </div>
           <div id="results" class="mrgn-tp-lg" aria-live="polite">
+
+<div id="ajax-0b" class="alert alert-info hidden">
+              <h3><small>Your XXX result </small><br>
+                POE for non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
+              <div data-ajax-replace="#ajax-resultnon"></div>
+            </div>
+<div id="ajax-0c" class="alert alert-info hidden">
+              <h3><small>Your XXX result </small><br>
+                POE for non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
+              <div data-ajax-replace="#ajax-resultnon"></div>
+            </div>
+
             <div id="ajax-1b" class="alert alert-info hidden">
               <h3><small>Your POE result </small><br>
                 POE for non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
