--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -381,9 +381,10 @@ Indian Act</li>
           <div id="results" class="mrgn-tp-lg" aria-live="polite">
 
 <div id="ajax-0b" class="alert alert-info hidden">
-              <h3><small>Your XXX result </small><br>
-                POE for non-employment income <small>for example, pension income, retiring allowances, RRSP and CPP/QPP</small></h3>
-              <div data-ajax-replace="#ajax-resultnon"></div>
+              <h3><small>Your result </small><br>
+                You are a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
+Indian Act?</small></h3>
+            <p> The worker is not exempt in this situation. To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
             </div>
 <div id="ajax-0c" class="alert alert-info hidden">
               <h3><small>Your XXX result </small><br>
