--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -261,7 +261,7 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether the income is taxable or exempt.</p>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as "<a href="#ajax-def2" aria-controls="centred-popup" class="wb-lbx" role="button">Indians <span class="far fa-question-circle"></span></a>" and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="centred-popup" class="wb-lbx" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
 
 
 
