--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -385,7 +385,8 @@ Indian Act</li>
               <h3><small>Your result </small><br>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
 Indian Act</small></h3>
-            <p> The worker is not exempt in this situation. To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
+            <p> The worker is not exempt in this situation.  </p>
+ <p>To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
  <div data-ajax-replace="#ajax-notreg"></div>         
   </div>
 <div id="ajax-0c" class="alert alert-warning hidden">
