--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -384,14 +384,14 @@ Indian Act</li>
 <div id="ajax-0b" class="alert alert-warning hidden">
               <h3><small>Your result </small><br>
                 The worker is a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the 
-Indian Act</small></h3>
+Indian Act</h3>
             <p class="mrgn-bttm-lg"> The worker is <strong>not exempt</strong> in this situation.  </p>
  <div data-ajax-replace="#ajax-notreg"></div>         
  <p class="mrgn-tp-lg">To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
   </div>
 <div id="ajax-0c" class="alert alert-warning hidden">
               <h3><small>Your result </small><br>
-               The worker is not registered under the Indian Act</small></h3>
+               The worker is not registered under the Indian Act</h3>
   <p class="mrgn-bttm-lg"> The worker is <strong>not exempt</strong> in this situation.  </p>
                <div data-ajax-replace="#ajax-notreg"></div>
             </div>
@@ -799,10 +799,9 @@ Indian Act</small></h3>
               </ul>
             </div>
           </details>
-        </div>
+        
       
-    </div>
-  </div>
+   
 
 
 
@@ -840,7 +839,7 @@ Indian Act</small></h3>
  </li>
 
   <li>
-<h3 id="step2">Determine the residency of the worker</h3>
+<h3 id="step2a">Determine the residency of the worker</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
@@ -1172,8 +1171,10 @@ Indian Act</small></h3>
 
 </li>
 
-</ol>		 
+</ol>	
+</div>
 	</details>	 
+</div></div>
 <h2 id="h_7">References</h2>
 		
 <h3 id="h_7_1">Related</h3>
