--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -281,10 +281,16 @@
           <div class="wb-frmvld gc-font-2019">
             <form>
               <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
-	 <p>Select the situation </p>
- <div data-ajax-replace="#ajax-reg"></div>
+ <div class="wb-fieldflow-header">
+                        
+                        <p class="wb-fieldflow-label">Select the situation</p>
+                       <p> <div data-ajax-replace="#ajax-reg"></div></p>
+
+                      </div>
+
+
 		 <ul>
-<li>Worker registered under the Indian Act
+<li>Worker is registered under the Indian Act
 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                       <div class="wb-fieldflow-header">
                         <div class="brdr-tp">
@@ -300,7 +306,7 @@
                           <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the situation?</p>
-                       <p>Learn more: <a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
+                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
 
                       </div>
                       <ul>
@@ -848,7 +854,7 @@ Indian Act</h3>
 <p>The status Indian individual's (status confirmed in step 1) income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 
@@ -1237,6 +1243,7 @@ Indian Act</h3>
   </ul>
 </nav>
 
+
 <section id="ajax-def1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
@@ -1248,7 +1255,7 @@ Indian Act</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
 	</div></section>
 
-<section id="ajax-def3" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Worker lives on the reserve</h2>
+<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Worker lives on the reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
