--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -393,7 +393,7 @@ Indian Act</li>
 Indian Act</h3>
             <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
 
- <div data-ajax-replace="#ajax-notreg"></div>         
+  <p> <div data-ajax-replace="#ajax-notreg"></div>     </p>      
  <p class="mrgn-tp-md">To confirm the effective date of the agreements and the expiry dates: <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html?utm_campaign=not-applicable&utm_medium=vanity-url&utm_source=canada-ca_tax-indigenous-end-dates">Information on the tax exemption under section 87 of the Indian Act</a>.</p>
   </div>
 <div id="ajax-0c" class="alert alert-warning hidden">
@@ -401,7 +401,7 @@ Indian Act</h3>
                The worker is not registered under the Indian Act</h3>
   <p class="mrgn-bttm-md mrgn-tp-md"> The worker is <strong>not exempt</strong> in this situation.  </p>
 
-               <div data-ajax-replace="#ajax-notreg"></div>
+              <p>   <div data-ajax-replace="#ajax-notreg"></div> </p> 
             </div>
 
             <div id="ajax-1b" class="alert alert-info hidden">
