--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -284,7 +284,8 @@
  <div class="wb-fieldflow-header">
                         
                         <p class="wb-fieldflow-label">Select the situation</p>
-                       <p> <div data-ajax-replace="#ajax-reg"></div></p>
+                       <p><a href="#reg" aria-controls="reg" class="overlay-lnk" role="button">How to determine if the worker is registered&nbsp;<span class="far fa-question-circle"></span></a></p>
+               
 
                       </div>
 
@@ -306,7 +307,7 @@
                           <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the situation?</p>
-                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
+                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
 
                       </div>
                       <ul>
@@ -855,7 +856,7 @@ Indian Act</h3>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
@@ -1244,7 +1245,13 @@ Indian Act</h3>
 </nav>
 
 
-<section id="ajax-def1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
+<section id="reg" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to determine if the worker is registered</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-reg"></div>
+	</div></section>
+
+
+<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>	
@@ -1255,7 +1262,7 @@ Indian Act</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
 	</div></section>
 
-<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Worker lives on the reserve</h2>
+<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">Worker lives on the reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
