--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -307,7 +307,7 @@
                           <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the situation?</p>
-                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
+                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
 
                       </div>
                       <ul>
@@ -972,7 +972,7 @@ Indian Act</h3>
 <h4 id="h_3_1">Residency situation</h4>
   
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> <a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> <strong>or</strong> you are a resident on a reserve, continue to <a href="#3a">Step 3a</a></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> <strong>or</strong> you are a resident on a reserve, continue to <a href="#3a">Step 3a</a></li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> Employee <strong>does not</strong> live on a reserve and you are <strong>not</strong> resident on a reserve but the employee is <strong>required to perform duties on a reserve</strong>, continue to <a href="#3b">Step 3b</a></li>
             </ul>
 
@@ -985,8 +985,8 @@ Indian Act</h3>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 </li>
 <li class="cnjnctn-col">Employee performs more than 50% of their employment duties on a reserve</li>
@@ -1008,8 +1008,8 @@ Indian Act</h3>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="centred-popup" class="wb-lbx" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="centred-popup" class="wb-lbx" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 </li>
 </ul>
